--- a/popup.html
+++ b/popup.html
@@ -14,11 +14,11 @@
     <div id="status-message" class="status-message"></div>
     
     <div class="setting">
-      <label for="fullMapHeight">Full Map Height</label>
-      <div class="toggle-switch">
+      <span class="setting-label">Full Map Height</span>
+      <label class="toggle-switch" for="fullMapHeight">
         <input type="checkbox" id="fullMapHeight">
         <span class="slider"></span>
-      </div>
+      </label>
     </div>
     
     <div class="info">
